# docker-compose

./: .env  .gitignore  CHANGELOG.md  Deploy_OPCUA.md  Deploy_PLC.md  LICENSE.txt  MAINTAINERS.md  Makefile  Makefile.bat  Makefile.new  Makefile.orig  Makefile.podman  Makefile.support  Podman.md  README.md  README_NEW.md  README_orig.md  TOPOLOGY.md  anylog-node-volume.yaml  anylog-node-volumes-0.0.0.tgz  append.sh  bkup_data.py  check_status.sh  common.env  configs.md  credentials.sh  data_generator.py  demo.md  demo.txt  deploy.sh  deployment_scripts.md  docker-compose-base.yml  docker-compose-grafana.yml  docker-compose-k8s.yml  docker-compose-postgres.yml  docker-compose-resolved.yml  docker-compose-update.yml  docker-compose.yml  docker_run.sh  env_params_list.md  (+21 more)
Dockerfiles/: Dockerfile.alpine  Dockerfile.ubuntu
KubeArmor/: anylog_publisher.yaml  start_publisher.sh
OpenHorizon/: anylog_generic_configs.env  anylog_master_configs.env  anylog_operator_configs.env  anylog_query_configs.env  base.json  clean_operator2.sh  demo_operator1.env  demo_operator1.json  demo_operator_configs.env  demo_operator_configs.json  dotenv_to_json.py  master_configs.env  master_configs.json  operator_configs.env  operator_configs.json  query_configs.env
archive/: authentication.env  blobs.env
cookies/: generate_cookies.py
customers/: barbara.json  dados.proto  dados_dashboard.json  dados_mapping.al  dados_pb2.py  dados_pb2_grpc.py  grpc_client.al  grpc_client_windows.al  grpc_curl.py  nextensio_overlay.sh
demo-code/: README.md  enterpise_b.json  enterpise_c.json  (+2 more)
(+1328 files in other folders)
