[metadata]
name = docker-compose
version = 1.4.2604 (os-dev - 511708 [2026-07-01 01:43:06])
author = AnyLog Co.
contact = info@anylog.co
description = docker-compose configurations for AnyLog deployment
license = Copyright AnyLog Co.
site = https://anylog.co
docs = https://github.com/AnyLog-co/documentation
source = https://github.com/AnyLog-co
