[metadata]
name = docker-compose
version = 1.4.2604 (os-dev - 4ec96c [2026-07-02 03:02:55])
author = AnyLog Co.
contact = info@anylog.co
description = docker-compose configurations for AnyLog deployment
license = Copyright AnyLog Co.
site = https://anylog.co
docs = https://github.com/AnyLog-co/documentation
source = https://github.com/AnyLog-co
